fixed some spacing and parallax

--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -7,7 +7,6 @@
     color: white;
     position: relative;
     height: 100vh;
-    width: 100vh;
 }
 
 .box {
